# homework_parsing_09

./: README.md
hw_09_version1.0/: config.ini  pyproject.toml  seeds.py
hw_09_version1.0/project_9/: authors.json  scrapy.cfg
hw_09_version1.0/project_9/project_9/: middlewares.py  settings.py
hw_09_version1.0/project_9/project_9/spiders/: authors.py  quotes.py
hw_09_version1.0/src/: db.py  models.py
hw_09_version2.0/: authors.json  main.py  pyproject.toml  seeds.py
hw_09_version2.0/src/: models.py
