[tool.poetry]
name = "it-hw-09"
version = "0.1.0"
description = ""
authors = ["Andrii Stoian <astoyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
