[tool.poetry]
name = "hw-09-version2-0"
version = "0.1.0"
description = ""
authors = ["Andrii Stoian <astoyan2002@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_09_version2"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.27.0"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
